--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.3.4",
     "react-pdf-tailwind": "^2.3.0",
     "react-phone-number-input": "^3.4.1",
     "react-router-dom": "^6.23.0",
