--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-pdf/renderer": "^3.4.4",
     "dotenv": "^16.4.5",
-    "firebase": "^10.11.1",
+    "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +24,7 @@
     "react-phone-number-input": "^3.4.1",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
